Add Initial readme with build status

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
-== README
+[![Build Status](https://travis-ci.org/marek2901/subject_manager_demo_app.svg?branch=master)](https://travis-ci.org/marek2901/subject_manager_demo_app)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+== SubjectManagerDemoApp 
 
-Things you may want to cover:
+Stack:
+  - Rails 4.2.1
+  - Ruby 2.2.3
+  - Postgres 9.3
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Simple web app for Teachers Students and Subjects management.
